feat(Records): Implemented get and delete records. Added some fixes on the error handling logic
